projects/nats/portal/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal
  name: portal
  namespace: nats-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - image: registry.coherent.in/nats-portal:306
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          # resources:
          #   requests:
          #     cpu: "100m"
          #     memory: "200Mi"
          #   limits:
          #     cpu: "200"
          #     memory: "400Mi"
          imagePullPolicy: Always
          name: portal
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-regcred
