projects/nats/portal/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
  namespace: nats-dev
  labels:
    app: portal
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        -  nats-dev.coherent.in
      secretName: portal-tls
  rules:
    - host: "nats-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-svc
                port:
                  number: 80
